home page updated

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/animated_barfiller.css">
 
     <link rel="stylesheet" href="css/spacing.css">
     <link rel="stylesheet" href="css/style.css">
@@ -151,7 +152,7 @@
     <!--============================
         ABOUT START
     ==============================-->
-    <section class="tf_about">
+    <section class="tf_about pt_100 pb_100">
         <div class="container">
             <div class="row">
                 <div class="col-xl-6">
@@ -161,17 +162,29 @@
                 </div>
                 <div class="col-xl-6">
                     <div class="tf_about_text">
-                        <div class="tf_common_heading">
+                        <div class="tf_common_heading mb_20">
                             <h3>Our About Us</h3>
                             <h1>Foods Gardern Organice About Features.</h1>
-                            <p>Beyond more stoic this along goodness this sed wow manatee mongos
-                                flusterd impressive man farcrud opened inside owin punitively
-                                wasteful telling spransac coldly spokeles.</p>
-                            <p>There are many variations of sum availab led we have do
-                                in alley of type and scrambled it some.</p>
                         </div>
-                        <a href="#" class="tf_common_btn">contact us</a>
-                        <a class="play_btn" href="#"></a>
+                        <p>Beyond more stoic this along goodness this sed wow manatee mongos
+                            flusterd impressive man farcrud opened inside owin punitively
+                            wasteful telling spransac coldly spokeles.</p>
+                        <p>There are many variations of sum availab led we have do
+                            in alley of type and scrambled it some.</p>
+
+                        <div class="tf__single_progressbar">
+                            <p> + Foods Creat Website</p>
+                            <div id="bar1" class="barfiller">
+                                <div class="tipWrap">
+                                    <span class="tip"></span>
+                                </div>
+                                <span class="fill" data-percentage="60"></span>
+                            </div>
+                        </div>
+                        <ul class="d-flex flex-wrap">
+                            <li><a href="#" class="tf_common_btn">contact us</a></li>
+                            <li><a class="play_btn" href="#"><i class="fas fa-play"></i></a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -908,6 +921,7 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <!--font-awesome js-->
     <script src="js/Font-Awesome.js"></script>
+    <script src="js/animated_barfiller.js"></script>
 
 
     <!--main js-->
