--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animated_barfiller.css">
+    <link rel="stylesheet" href="css/venobox.min.css">
 
     <link rel="stylesheet" href="css/spacing.css">
     <link rel="stylesheet" href="css/style.css">
@@ -183,7 +184,10 @@
                         </div>
                         <ul class="d-flex flex-wrap">
                             <li><a href="#" class="tf_common_btn">contact us</a></li>
-                            <li><a class="play_btn" href="#"><i class="fas fa-play"></i></a></li>
+                            <li><a class="venobox play_btn" data-autoplay="true" data-vbtype="video"
+                                    href="https://youtu.be/CVHj7Wxhvdo">
+                                    <i class="fas fa-play"></i>
+                                </a></li>
                         </ul>
                     </div>
                 </div>
@@ -560,20 +564,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-6">
-                    <div class="tf_timeline_text">
+                    <div class="tf__offer_text">
                         <div class="tf__common_heading">
                             <h3>Our time line</h3>
                             <h2>Foods Gardern Time Line About Features.</h2>
                         </div>
-
-
-
-
-
-
-
-
-
+                        <div class="simply-countdown simply-countdown-one d-flex flex-wrap"></div>
 
                         <a href="#" class="tf_common_btn">read more</a>
                     </div>
@@ -589,23 +585,23 @@
     <!--============================
         TEAM START
     ==============================-->
-    <section class="tf_team">
+    <section class="tf__team pt_95 pb_100">
         <div class="container">
             <div class="row">
                 <div class="col-6 m-auto">
-                    <div class="tf_common_heading">
+                    <div class="tf__common_heading mb_15">
                         <h3>our team member</h3>
-                        <h1>Foods Gardern Products About Features.</h1>
+                        <h2>Foods Gardern Products About Features.</h2>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xl-3">
-                    <div class="tf_single_team">
-                        <div class="tf_team_img">
+                    <div class="tf__single_team">
+                        <div class="tf__team_img">
                             <img src="images/team_1.jpg" alt="featured" class="img-fluid w-100">
-                            <div class="tf_team_overlay">
-                                <ul class="">
+                            <div class="tf__team_overlay">
+                                <ul>
                                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                                     <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
@@ -613,18 +609,18 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="tf_team_text">
-                            <a class="tf_team_heading">Daemon Raras</a>
+                        <div class="tf__team_text">
+                            <a class="tf__item_title" href="#">Daemon Raras</a>
                             <p>Founder</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-3">
-                    <div class="tf_single_team">
-                        <div class="tf_team_img">
+                    <div class="tf__single_team">
+                        <div class="tf__team_img">
                             <img src="images/team_2.jpg" alt="featured" class="img-fluid w-100">
-                            <div class="tf_team_overlay">
-                                <ul class="">
+                            <div class="tf__team_overlay">
+                                <ul>
                                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                                     <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
@@ -632,18 +628,18 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="tf_team_text">
-                            <a class="tf_team_heading">Daemon Raras</a>
+                        <div class="tf__team_text">
+                            <a class="tf__item_title" href="#">Daemon Raras</a>
                             <p>Founder</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-3">
-                    <div class="tf_single_team">
-                        <div class="tf_team_img">
+                    <div class="tf__single_team">
+                        <div class="tf__team_img">
                             <img src="images/team_3.jpg" alt="featured" class="img-fluid w-100">
-                            <div class="tf_team_overlay">
-                                <ul class="">
+                            <div class="tf__team_overlay">
+                                <ul>
                                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                                     <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
@@ -651,18 +647,18 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="tf_team_text">
-                            <a class="tf_team_heading">Daemon Raras</a>
+                        <div class="tf__team_text">
+                            <a class="tf__item_title" href="#">Daemon Raras</a>
                             <p>Founder</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-3">
-                    <div class="tf_single_team">
-                        <div class="tf_team_img">
+                    <div class="tf__single_team">
+                        <div class="tf__team_img">
                             <img src="images/team_4.jpg" alt="featured" class="img-fluid w-100">
-                            <div class="tf_team_overlay">
-                                <ul class="">
+                            <div class="tf__team_overlay">
+                                <ul>
                                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                                     <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
@@ -670,13 +666,12 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="tf_team_text">
-                            <a class="tf_team_heading">Daemon Raras</a>/h3>
+                        <div class="tf__team_text">
+                            <a class="tf__item_title" href="#">Daemon Raras</a>
                             <p>Founder</p>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
@@ -688,14 +683,17 @@
     <!--============================
         VIDEO START
     ==============================-->
-    <section class="tf_video" style="background: url(images/video_bg.jpg);">
-        <div class="tf_video_overly">
+    <section class="tf__video" style="background: url(images/video_bg.jpg);">
+        <div class="tf__video_overly pt_165 pb_170">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-8 m-auto">
-                        <div class="tf_video_text">
-                            <h1>We video About a healthier Lifestyle but in a Natural Way</h1>
-                            <a href="#"><i class="fal fa-play"></i></a>
+                        <div class="tf__video_text">
+                            <h2>We video About a healthier Lifestyle but in a Natural Way</h2>
+                            <a class="venobox play_btn" data-autoplay="true" data-vbtype="video"
+                                href="https://youtu.be/CVHj7Wxhvdo">
+                                <i class="fal fa-play"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -708,46 +706,36 @@
 
 
     <!--============================
-        CHOOSE START
+        WHY CHOOSE START
     ==============================-->
-    <section class="tf_choose">
+    <section class="tf__why_choose pt_100 pb_100">
         <div class="container">
             <div class="row">
-                <div class="col-xl-6">
-                    <div class="tf_choose_img">
+                <div class="col-xl-5">
+                    <div class="tf__choose_img">
                         <img src="images/choose_1.jpg" alt="choose" class="img-fluid w-100">
-                        <div class="tf_choose_img2">
-                            <img src="images/choose_2.jpg" alt="choose" class="img-fluid w-100">
-                        </div>
                     </div>
                 </div>
-                <div class="col-xl-6">
-                    <div class="tf_choose_text">
-                        <div class="tf_common_heading">
+                <div class="col-xl-7">
+                    <div class="tf__choose_text">
+                        <div class="tf__common_heading mb_25">
                             <h3>Our Why Choose Us</h3>
-                            <h1>Foods Gardern Organice About Features.</h1>
-                            <p>Beyond more stoic this along goodness this sed wow manatee mongos
-                                flusterd impressive man farcrud opened inside owin punitively
-                                wasteful telling spransac coldly spokeles.</p>
+                            <h2>Foods Gardern Organice About Features.</h2>
                         </div>
+                        <p>Beyond more stoic this along goodness this sed wow manatee mongos
+                            flusterd impressive man farcrud opened inside owin punitively
+                            wasteful telling spransac coldly spokeles.</p>
 
-                        <div class="tf_choose_dtls">
-                            <a href="#" class="choose_heading">
-                                <span><i class="fas fa-pumpkin"></i></span>
-                                <h3>Best Tometo Cottage</h3>
-                            </a>
+                        <div class="tf__choose_details">
+                            <h3><span><i class="fas fa-pumpkin"></i></span> Best Tometo Cottage </h3>
                             <p>Beyond more stoic this along goodness this sed wow manatee mongos flusterd impressiv...
                             </p>
                         </div>
 
-                        <div class="tf_choose_dtls">
-                            <a href="#" class="choose_heading">
-                                <span><i class="fas fa-salad"></i></span>
-                                <h3>Gravenhurst Cottage</h3>
-                            </a>
+                        <div class="tf__choose_details">
+                            <h3><span><i class="fas fa-salad"></i></span> Gravenhurst Cottage</h3>
                             <p>Beyond more stoic this along goodness this sed wow manatee mongos flusterd impressiv...
                             </p>
-
                         </div>
 
                     </div>
@@ -756,66 +744,36 @@
         </div>
     </section>
     <!--============================
-        CHOOSE END
+        WHY CHOOSE END
     ==============================-->
 
 
     <!--============================
         BLOG START
     ==============================-->
-    <section class="tf_blog">
+    <section class="tf__blog pt_95 pb_100">
         <div class="container">
             <div class="row">
-                <div class="col-6 m-auto">
-                    <div class="tf_common_heading2">
+                <div class="col-xl-5 m-auto">
+                    <div class="tf__common_heading">
                         <h3>our Largest Blog</h3>
-                        <h1>Foods Gardern Organice About Features.</h1>
+                        <h2>Foods Gardern Organice About Features.</h2>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xl-4">
-                    <div class="tf_single_blog">
-                        <span class="blog_food">foods</span>
-                        <a href="#" class="tf_blog_img">
+                    <div class="tf__single_blog">
+                        <a href="#" class="tf__blog_img">
                             <img src="images/blog_1.jpg" alt="service" class="img-fluid w-100">
-                            <span class="tf_blog_overlay"></span>
+                            <span class="tf__blog_overlay"></span>
                         </a>
-                        <div class="tf_blog_text">
-                            <a href="#" class="tf_blog_heading">We Gravenhurst Cottage Of Garden Foods.</a>
+                        <div class="tf__blog_text">
+                            <a href="#" class="category">foods</a>
+                            <a class="tf__item_title" href="#">We Gravenhurst Cottage Of Garden Foods.</a>
                             <p>Beyond more stoic this along goodness punitively wasteful telling spransac we can coldly
                                 spokeles... </p>
-                            <a href="#" class="tf_blog_link">read more +</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4">
-                    <div class="tf_single_blog">
-                        <span class="blog_food">foods</span>
-                        <a href="#" class="tf_blog_img">
-                            <img src="images/blog_2.jpg" alt="service" class="img-fluid w-100">
-                            <span class="tf_blog_overlay"></span>
-                        </a>
-                        <div class="tf_blog_text">
-                            <a href="#" class="tf_blog_heading">We Gravenhurst Cottage Of Garden Foods.</a>
-                            <p>Beyond more stoic this along goodness punitively wasteful telling spransac we can coldly
-                                spokeles... </p>
-                            <a href="#" class="tf_blog_link">read more +</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4">
-                    <div class="tf_single_blog">
-                        <span class="blog_food">foods</span>
-                        <a href="#" class="tf_blog_img">
-                            <img src="images/blog_3.jpg" alt="service" class="img-fluid w-100">
-                            <span class="tf_blog_overlay"></span>
-                        </a>
-                        <div class="tf_blog_text">
-                            <a href="#" class="tf_blog_heading">We Gravenhurst Cottage Of Garden Foods.</a>
-                            <p>Beyond more stoic this along goodness punitively wasteful telling spransac we can coldly
-                                spokeles... </p>
-                            <a href="#" class="tf_blog_link">read more +</a>
+                            <a class="tf__blog_link" href="#">read more +</a>
                         </div>
                     </div>
                 </div>
@@ -914,6 +872,8 @@
     <!--font-awesome js-->
     <script src="js/Font-Awesome.js"></script>
     <script src="js/animated_barfiller.js"></script>
+    <script src="js/simplyCountdown.js"></script>
+    <script src="js/venobox.min.js"></script>
 
 
     <!--main js-->
